k8s/deployment-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitalsync-database
  labels:
    app: vitalsync-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vitalsync-database
  template:
    metadata:
      labels:
        app: vitalsync-database
    spec:
      containers:
        - name: database
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
