k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitalsync-frontend
  labels:
    app: vitalsync-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vitalsync-frontend
  template:
    metadata:
      labels:
        app: vitalsync-frontend
    spec:
      containers:
        - name: frontend
          image: zeyna10/vitalsync-frontend:latest
          ports:
            - containerPort: 80
