k8s/service-backend-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  # Alias DNS interne pour compatibilite avec nginx.conf (proxy_pass http://backend:3000)
  type: ClusterIP
  selector:
    app: vitalsync-backend
  ports:
    - port: 3000
      targetPort: 3000
