k8s/service-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: ClusterIP
  selector:
    app: vitalsync-database
  ports:
    - port: 5432
      targetPort: 5432
