k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitalsync-frontend-service
spec:
  type: ClusterIP
  selector:
    app: vitalsync-frontend
  ports:
    - port: 80
      targetPort: 80
